--- a/example (2).html
+++ b/example (2).html
@@ -10,10 +10,10 @@
   
 <header>  
     <div class="logo">  
-        <img src="images/logo.png" alt="Logo $VIANNA AI">  
+        <img src="superai-image-1736182119779.webp" alt="Logo $VIANNA AI">  
     </div>  
     <div class="banner">  
-        <img src="images/banner.jpg" alt="Banner Image">  
+        <img src="" alt="Banner Image">  
     </div>  
 </header>  
   
